# RegimeAtlas

./: .gitignore  LICENSE  MANIFEST.in  Makefile  PAPER_FREEZE_MANIFEST.json  README.md  RELEASE_NOTES_v1.md  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  benchmark_suite.json  paper_suite.json  paper_suite_smoke.json
docs/: PAPER_REPRODUCTION.md  RELEASE_CHECKLIST.md
experiments/: __init__.py  common.py  fhn_nuisance_pipeline.py  fhn_pipeline.py  run_config.py  run_study.py  vdp_nuisance_pipeline.py  vdp_pipeline.py  vdp_scout.py
regime_toolkit/: __init__.py  ablation.py  boundaries.py  calibration.py  cli.py  contracts.py  indicator_factories.py  integrity.py  io.py  observations.py  plots.py  provenance.py  robustness.py  schema.py  simulate.py  study.py  sweep.py
regime_toolkit/indicators/: __init__.py  divergence_delay.py  effective_dimension.py  jacobian.py  lyapunov.py  occupancy.py
regime_toolkit/oracles/: __init__.py  fhn.py  vdp_autonomous.py
regime_toolkit/systems/: __init__.py  base.py  fhn.py  vdp_forced.py  vdp_forced_autonomous.py
tests/: test_ablation_and_runner.py  test_boundaries_and_oracles.py  test_contracts_and_study.py  test_indicators.py  test_lyapunov.py  test_observations.py  test_pipelines_smoke.py  test_release_and_cli.py  test_schema_and_integrity.py  test_sweep_io_and_plots.py  test_systems_and_simulate.py
