[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structural-regimes-toolkit"
version = "1.0.0"
description = "Trajectory-only structural regime analysis for deterministic ODE benchmarks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]
authors = [
  {name = "Project maintainers"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[project.scripts]
regime-toolkit = "regime_toolkit.cli:main"

[tool.setuptools.packages.find]
include = ["regime_toolkit*", "experiments*"]

[tool.setuptools]
include-package-data = true
